cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
set(PROJECT_NAMESPACE)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project("P12-CYA-2425"
        VERSION 1.0.0
        DESCRIPTION "Práctica 12 de CYA 2024-2025"
        LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(PROJECT_SHORTMAME "PR12-CYA-2425")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_TYPE Debug)

add_subdirectory("src")